Bug 141828 - KF5 VCL PLUGIN: Wrong cursor for handle of configurable shapes
Summary: KF5 VCL PLUGIN: Wrong cursor for handle of configurable shapes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.1.2.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords:
Depends on:
Blocks: KDE, KF5 Mouse-Cursor
  Show dependency treegraph
 
Reported: 2021-04-22 09:36 UTC by Callegar
Modified: 2023-11-02 10:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Callegar 2021-04-22 09:36:21 UTC
Description:
When positioning the cursor on the extra handles of configurable shapes (such as brackets, rectangles with rounded corners, etc.), the cursor changes.

In the gtk3 VCL it changes to a hand with a pointing finger, where the "target" is at the end of the finger, so that the "pointing" ability of the cursor is retained.

In the KF5 VCL it changes to an open hand, where the target is exactly behind the hand. This removes any "pointing ability" and makes the cursor hardly suited for controlling the handle, because to control it you need to position the open hand so that it completely covers the handle.

Steps to Reproduce:
1. Open draw, insert a shape with an extra handle (for instance the { shape from the symbol shapes palette).
2. Try to reach one of the the handles controlling the shape properties

Actual Results:
In the KF5 VCL the cursor changes to an open hand. To move the handle you need to cover it completely, and this makes it hard to see how you move the handle.

Expected Results:
The cursor should change into a hand with a pointing finger. To move the handle you should need to put only the edge of the finger onto the handle (which is small enough not to cover it completely). In this way when you move the handle you can see where you move it.


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: DrawingDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes
Comment 1 Julien Nabet 2021-04-22 11:17:49 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
gtk3 rendering does indeed use the index tip of the hand.
Comment 2 Callegar 2021-09-15 00:08:19 UTC
Probably related to bug 133552
Comment 3 Buovjaga 2022-05-04 19:24:41 UTC
Still repro

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 6ebf46e332facfae5fd6027ec667ccd5993dd493
CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Comment 4 Michael Weghorn 2023-10-12 17:05:01 UTC
Technically, this isn't a bug in the Qt-based VCL plugins, since they're using the type of cursor that's explicitly specified.

From reading the code, I'd expect that macOS would behave similarly, but don't have that available for testing.

Pending Gerrit change to request the pointing hand in svx code:
https://gerrit.libreoffice.org/c/core/+/157891

(In reply to Julien Nabet from comment #1)
> On pc Debian x86-64 with master sources updated today, I could reproduce
> this.
> gtk3 rendering does indeed use the index tip of the hand.

This is because gtk3 just uses the same cursor for both, the "pointing hand" and the "hand", s. the commit message of above change for more details.
Comment 5 Commit Notification 2023-10-12 19:10:17 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3d1cd490ac0366245c4b55d711611c21149a76e9

tdf#141828 svx: Use pointing hand for custom shape handles

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-11-02 10:12:41 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/46bbc6ff0f99f664ec4957cd29943b0627cbf2ba

tdf#141828 svx: Use pointing hand for custom shape handles

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.