tdf#141828 svx: Use pointing hand for custom shape handles

Use the *pointing* hand cursor (`PointerStyle::RefHand`)
instead of the hand symbol cursor (`PointerStyle::Hand`)
for handles for custom shape interaction.
(S. how `SdrHdlKind::CustomShape1` is only specified in
`SdrObjCustomShape::AddToHdlList`, except for read-only
switch/cases elsewhere).

As mentioned in tdf#141828, this has the advantage that
the user can see where the handle is being moved.

For gtk3, this doesn't make any difference in practice,
because it's using the same cursor type for both,
`PointerStyle::RefHand` and `PointerStyle::Hand`
(s. `GtkSalDisplay::getCursor`, but the Qt-based VCL
plugins (`QtData::getCursor`) and macOS
(s. `AquaSalFrame::getCurrentCursor`) make a
distinction between them.

Change-Id: I5d35481e5c5edc1895a7c4a973315ee6b187b983
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157891
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 3d1cd490ac0366245c4b55d711611c21149a76e9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158032
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>